--- a/index.html
+++ b/index.html
@@ -174,15 +174,15 @@ https://templatemo.com/tm-570-chain-app-dev
               <div class="left-content show-up header-text wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="row">
                   <div class="col-lg-12">
-                    <h2>Unlock Your </br> Potential Skills </br> With Us</h2>
+                    <h2>Unlock Your </br> <em>Potential Skills</em> </br> With Us</h2>
                     <p>Let's create a better educational global community</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="white-button first-button scroll-to-section">
-                      <a href="#contact">Free Quote <i class="fab fa-apple"></i></a>
+                     <!-- <a href="#contact">Free Quote <i class="fab fa-apple"></i></a> -->
                     </div>
                     <div class="white-button scroll-to-section">
-                      <a href="#contact">Free Quote <i class="fab fa-google-play"></i></a>
+                     <!-- <a href="#contact">Free Quote <i class="fab fa-google-play"></i></a> -->
                     </div>
                   </div>
                 </div>
@@ -263,12 +263,16 @@ https://templatemo.com/tm-570-chain-app-dev
 
   <div id="about" class="about-us section">
     <div class="container">
-      <div class="row">
+      <div class="rowa">
         <div class="col-lg-6 align-self-center">
           <div class="section-heading">
             <h4>About <em>What We Do</em> &amp; Who We Are</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
-            <p>In the era of global acceleration, English
+            <p></p>
+          </div>
+          <div class="rowa">
+            <div class="col-lg-12">
+              <p> In the era of global acceleration, English
               language skills are the key to success in various
               aspects of life. However, many individuals still
               have difficulty achieving the required English
@@ -276,19 +280,16 @@ https://templatemo.com/tm-570-chain-app-dev
               studies abroad, pursue a career in a
               multinational company, or simply improve their
               job prospects.</p>
-          </div>
-          <div class="row">
-            <div class="col-lg-12">
               <p>Seeing the urgent need for effective and
                 efficient English learning solutions, Achieved.id is
                 here as the answer. Achieved.id is committed to
                 helping every individual reach their full potential
                 through high-quality English language courses
                 tailored to their individual needs.</p>
-              <div class="gradient-button">
-                <a href="#">Start 14-Day Free Trial</a>
-              </div>
-              <span>*No Credit Card Required</span>
+              <!-- <div class="gradient-button">
+                 <a href="#">Start 14-Day Free Trial</a> 
+              </div> 
+              <span>*No Credit Card Required</span> -->
             </div>
           </div>
         </div>
@@ -699,7 +700,7 @@ https://templatemo.com/tm-570-chain-app-dev
         </div>
         <div class="col-lg-12">
           <div class="copyright-text">
-            <p>Copyright © 2022 Chain App Dev Company. All Rights Reserved. 
+            <p>Copyright © 2024 Achieved.id. All Rights Reserved. 
           <br>Design: <a href="https://templatemo.com/" target="_blank" title="css templates">TemplateMo</a><br>
         
           Distributed By: <a href="https://themewagon.com/" target="_blank" title="Bootstrap Template World">ThemeWagon</a>
