--- a/index.html
+++ b/index.html
@@ -552,68 +552,50 @@ https://templatemo.com/tm-570-chain-app-dev
       <div class="row">
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading">
-            <h4>We Have The Best Pre-Order <em>Prices</em> You Can Get</h4>
+            <h4>We Have The <em>Best</em> Program</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eismod tempor incididunt ut labore et dolore magna.</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="pricing-item-regular">
-            <span class="price">$12</span>
-            <h4>Standard Plan App</h4>
+            <span class="price"></span>
             <div class="icon">
-              <img src="assets/images/pricing-table-01.png" alt="">
+              <img src="assets/images/language.png" alt="">
             </div>
+            <h4>Language</h4>
             <ul>
-              <li>Lorem Ipsum Dolores</li>
-              <li>20 TB of Storage</li>
-              <li class="non-function">Life-time Support</li>
-              <li class="non-function">Premium Add-Ons</li>
-              <li class="non-function">Fastest Network</li>
-              <li class="non-function">More Options</li>
+              <p> We provide Coaching  Scholarship, IELTS Academic and General Training, English and Arabic learning for kids </p>
             </ul>
             <div class="border-button">
-              <a href="#">Purchase This Plan Now</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="pricing-item-pro">
-            <span class="price">$25</span>
-            <h4>Business Plan App</h4>
-            <div class="icon">
-              <img src="assets/images/pricing-table-01.png" alt="">
-            </div>
-            <ul>
-              <li>Lorem Ipsum Dolores</li>
-              <li>50 TB of Storage</li>
-              <li>Life-time Support</li>
-              <li>Premium Add-Ons</li>
-              <li class="non-function">Fastest Network</li>
-              <li class="non-function">More Options</li>
-            </ul>
-            <div class="border-button">
-              <a href="#">Purchase This Plan Now</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="pricing-item-regular">
-            <span class="price">$66</span>
-            <h4>Premium Plan App</h4>
+            <span class="price"></span>
             <div class="icon">
-              <img src="assets/images/pricing-table-01.png" alt="">
+              <img src="assets/images/coding.png" alt="">
             </div>
+            <h4>Coding</h4>
             <ul>
-              <li>Lorem Ipsum Dolores</li>
-              <li>120 TB of Storage</li>
-              <li>Life-time Support</li>
-              <li>Premium Add-Ons</li>
-              <li>Fastest Network</li>
-              <li>More Options</li>
+              <p> We use the learning media (Scratch and Tynker) with AI for kids and web programming for adults </p>
             </ul>
             <div class="border-button">
-              <a href="#">Purchase This Plan Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="pricing-item-regular">
+            <span class="price"></span>
+            <div class="icon">
+              <img src="assets/images/iot.png" alt="">
+            </div>
+            <h4>Internet of Things</h4>
+            <ul>
+            <p> Study the application of IoT in industry to increase efficiency and productivity in the industrial era 4.0</p>
+            </ul>
+            <div class="border-button">
             </div>
           </div>
         </div>
