--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <html lang="en">
 
   <head>
+    
 
     <meta charset="UTF-8">
+    <meta property="og:title" content="An Image By ItsJustOne#9817">
+    <meta property="og:description" content="Remember always that there is an end in the tunnel 🥰">
+    <meta property="og:image" content="https://cdn.discordapp.com/banners/907132383814377502/4aca154cd6040b31aacaaf781877f121.png?size=1024">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Achieved.id - Let's create a better educational global community">
     <meta name="author" content="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-
+    <link href="assets/images/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <title>Achieved.id - Let's create a better educational global community</title>
 
     <!-- Bootstrap core CSS -->
@@ -64,8 +69,8 @@ https://templatemo.com/tm-570-chain-app-dev
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
              <!--- <li class="scroll-to-section"><a href="#services">Services</a></li> -->
               <li class="scroll-to-section"><a href="#about">About</a></li>
-              <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
-              <li class="scroll-to-section"><a href="#newsletter">Newsletter</a></li>
+              <li class="scroll-to-section"><a href="#program">Program</a></li>
+              <li class="scroll-to-section"><a href="#contact">Contact</a></li>
               <li><div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Sign In Now</a></div></li> 
             </ul>        
             <a class='menu-trigger'>
@@ -547,14 +552,14 @@ https://templatemo.com/tm-570-chain-app-dev
     </div>
   </div>
 -->
-  <div id="pricing" class="pricing-tables">
+  <div id="program" class="pricing-tables">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading">
             <h4>We Have The <em>Best</em> Program</h4>
             <img src="assets/images/heading-line-dec.png" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eismod tempor incididunt ut labore et dolore magna.</p>
+            <p></p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -603,15 +608,16 @@ https://templatemo.com/tm-570-chain-app-dev
     </div>
   </div> 
 
-  <footer id="newsletter">
+<!-- --------------------------------------Contact-------------------------------------------- -->
+  <footer id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 offset-lg-2">
           <div class="section-heading">
-            <h4>Join our mailing list to receive the news &amp; latest trends</h4>
+          <!--  <h4>-</h4> -->
           </div>
         </div>
-        <div class="col-lg-6 offset-lg-3">
+        <!--  <div class="col-lg-6 offset-lg-3">
           <form id="search" action="#" method="GET">
             <div class="row">
               <div class="col-lg-6 col-sm-6">
@@ -626,15 +632,15 @@ https://templatemo.com/tm-570-chain-app-dev
               </div>
             </div>
           </form>
-        </div>
+        </div> -->
       </div>
       <div class="row">
         <div class="col-lg-3">
           <div class="footer-widget">
             <h4>Contact Us</h4>
-            <p>Rio de Janeiro - RJ, 22795-008, Brazil</p>
-            <p><a href="#">010-020-0340</a></p>
-            <p><a href="#">info@company.co</a></p>
+            <p>Jalan Raya Cikini Ruko Central Cikini No. 60 HH Menteng, Jakarta, Indonesia</p>
+            <p><a href="#">Mobile: (+62)81392707655</a></p>
+            <p><a href="#">achieved.id@gmail.com</a></p>
           </div>
         </div>
         <div class="col-lg-3">
@@ -673,20 +679,20 @@ https://templatemo.com/tm-570-chain-app-dev
         </div>
         <div class="col-lg-3">
           <div class="footer-widget">
-            <h4>About Our Company</h4>
             <div class="logo">
-              <img src="assets/images/white-logo.png" alt="">
+              <img src="assets/images/logo-white.png" alt="">
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+            <p>Let's create a better educational global community</p>
           </div>
         </div>
         <div class="col-lg-12">
           <div class="copyright-text">
-            <p>Copyright © 2024 Achieved.id. All Rights Reserved. 
-          <br>Design: <a href="https://templatemo.com/" target="_blank" title="css templates">TemplateMo</a><br>
-        
-          Distributed By: <a href="https://themewagon.com/" target="_blank" title="Bootstrap Template World">ThemeWagon</a>
-        </p>
+            <p>
+              <span>© 2024 Achieved.id. All Rights Reserved.</span>  
+            <br>
+            <span>Design: <a href="https://templatemo.com/" target="_blank" title="css templates">TemplateMo | </a></span>
+            <span>By: <a href="https://themewagon.com/" target="_blank" title="Bootstrap Template World">ThemeWagon</a></span>
+            </p>
           </div>
         </div>
       </div>
