--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="An Image By ItsJustOne#9817">
     <meta property="og:description" content="Remember always that there is an end in the tunnel 🥰">
-    <meta property="og:image" content="https://cdn.discordapp.com/banners/907132383814377502/4aca154cd6040b31aacaaf781877f121.png?size=1024">
+    <meta property="og:image" content="https://raw.githubusercontent.com/agungfadilnur/test/refs/heads/main/assets/images/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Achieved.id - Let's create a better educational global community">
     <meta name="author" content="">
