--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         font-family: "Poppins", sans-serif;
       }
 
+      .img {
+        font-family: "Poppins", sans-serif;
+      }
+
       .font-sub {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
       }
