--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
           <div>
             <img
-              src="images/navigasi.png"
+              src="images/navigasi.svg"
               alt="Peta Project"
               style="width: auto; height: 180px; margin-bottom: 0rem"
             />
