--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     </div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
