--- a/index.html
+++ b/index.html
@@ -211,6 +211,61 @@
         font-size: 1.2rem;
     }
 }
+
+.csv-import-section {
+    margin-top: 30px;
+    padding-top: 20px;
+    border-top: 1px solid #ddd;
+}
+
+.btn-import {
+    background-color: #4a6fa5;
+    margin-bottom: 15px;
+}
+
+.btn-import:hover {
+    background-color: #3a5a80;
+}
+
+.csv-preview {
+    margin-top: 15px;
+    background: #f9f9f9;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #eee;
+}
+
+#csv-preview-table {
+    max-height: 200px;
+    overflow-y: auto;
+    margin-top: 10px;
+}
+
+.preview-table {
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 12px;
+}
+
+.preview-table th, .preview-table td {
+    border: 1px solid #ddd;
+    padding: 5px;
+    text-align: left;
+}
+
+.preview-table th {
+    background-color: #f2f2f2;
+    position: sticky;
+    top: 0;
+}
+
+.form-control {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
     </style>
 </head>
 
@@ -262,6 +317,27 @@
                 <label><input type="checkbox" class="filter-type" value="sekolah" checked> Sekolah Islam</label>
                 <label><input type="checkbox" class="filter-type" value="yayasan" checked> Yayasan</label>
                 <label><input type="checkbox" class="filter-type" value="wakaf" checked> Aset Wakaf</label>
+            </div>
+
+            <div class="csv-import-section">
+                <h3>Import Data dari CSV</h3>
+                <div class="form-group">
+                    <label for="csv-file">Pilih File CSV</label>
+                    <input type="file" id="csv-file" accept=".csv" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="csv-delimiter">Delimiter</label>
+                    <select id="csv-delimiter" class="form-control">
+                        <option value=",">Koma (,)</option>
+                        <option value=";">Titik Koma (;)</option>
+                        <option value="\t">Tab</option>
+                    </select>
+                </div>
+                <button id="import-csv" class="btn-import">Import Data</button>
+                <div class="csv-preview">
+                    <h4>Preview Data</h4>
+                    <div id="csv-preview-table"></div>
+                </div>
             </div>
 
             <h3>Daftar Lokasi</h3>
